Thu Nov 20 10:59:48 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c: fixed an error from #120684 patch raised in
	  #127450
	* tests/docs/Makefile.am tests/docs/bug-134.xml
	  tests/general/Makefile.am tests/docs/bug-134*: added tests
	  to the regression suite for bug #127450.
	
Thu Nov 20 00:22:14 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c: fixed a bug in the keys selector parsing
	  #120684 when | is in a predicate or a string.
	* tests/docs/Makefile.am tests/docs/bug-133.xml
	  tests/general/Makefile.am tests/docs/bug-133*: added tests
	  to the regression suite for bug #120684.
	* Makefile.am: don't package cvs temp files
	* doc/apibuild.py: update from libxml2 one

Tue Nov 18 13:42:12 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/strings.c: fixed entity problem in exslt:tokenize
	  uncovered by newapi.xsl
	* libxslt/transform.c,libxslt/pattern.c,libxslt/keys.c: changed
	  to use IS_BLANK_CH for char compares (fixes warnings)

Fri Nov 14 23:59:08 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: applied fix from Bjorn Reese to close
	  number formatting bug #126994

Fri Nov 14 18:44:50 CET 2003 Daniel Veillard <daniel@veillard.com>

	* Makefile.am configure.in libexslt.pc.in libxslt.spec.in: adding
	  libexslt.pc support

Thu Nov 13 11:54:36 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c libxslt/documents.c libxslt/transform.c
	  libxslt/variables.c libxslt/xsltInternals.h: applied Mark Vakoc
	  patch to moves the control of the XSLT debugger into the transform
	  context.

Tue Nov 12 18:17:24 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/functions.c: applied patch for param visibility from
	  Shaun McCance.  Changed variable scoping in accordance with
	  Shaun's suggestions.  This fixed problem reported on the list
	  by Bernd Lang
	* tests/exslt/functions/function.8.[xml,xsl,out], Makefile.am:
	  regression test for above
	