@@ -1,0 +1,5 @@
+<root>
+  <sect><h1 /></sect>
+  <sect><h2 /></sect>
+  <sect><h3 /></sect>
+</root>
